--- a/public/css/NewsDetails.css
+++ b/public/css/NewsDetails.css
@@ -4,7 +4,9 @@
 }
 .all{
     width: 100%;
-    background-color: black;
+    background: url(https://touchworld.oss-cn-shanghai.aliyuncs.com/touch/img/bj1.jpg);
+    background-size: 100% 100%;
+    background-attachment: fixed;
 }
 .all .newList{
     width: 70%;
