--- a/public/css/magnific-popup.css
+++ b/public/css/magnific-popup.css
@@ -244,7 +244,7 @@ button::-moz-focus-inner {
 /* Main image in popup */
 img.mfp-img {
   width: auto;
-  max-width: 100%;
+  width: 100%;
   height: auto;
   display: block;
   line-height: 0;
