--- a/public/css/new.css
+++ b/public/css/new.css
@@ -8,7 +8,7 @@ a{
 }
 .all{
     width: 100%;
-    background: url(../img/bj1.jpg);
+    background: url(https://touchworld.oss-cn-shanghai.aliyuncs.com/touch/img/bj1.jpg);
     background-size: 100% 100%;
     background-attachment: fixed;
 }
