--- a/public/css/template-style.scss
+++ b/public/css/template-style.scss
@@ -198,7 +198,6 @@ p.indent{
 .tm-social-link:last-child { margin-right: 0; }
 
 .tm-footer {
-	pointer-events: none;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -207,6 +206,15 @@ p.indent{
 	z-index: 1001;
 	padding: 0 11px 12px;
 	text-align: center;
+	.tm-copyright-text {
+		color: white;
+		display: inline-block;
+		font-size: 1.8rem;
+		font-weight: 400;
+		padding: 5px 12px;
+		width: 100%;
+		background: rgba(0, 0, 0, 0.3);
+	}
 }
 
 .tm-social-icons-container { margin-bottom: 30px; }
@@ -423,15 +431,7 @@ border-top-color: #f9c922; /* Chrome, Opera 15+, Safari 5+ */ animation: spin 1.
     width: 100%;    
 }
 
-.tm-copyright-text {
-	background-color: rgba(0, 0, 0, 0.3);
-	color: white;
-    display: inline-block;
-    font-size: 1.8rem;
-    font-weight: 400;
-    padding: 5px 12px;
-    width: 100%;
-}
+
 
 .tm-home-fa {
 	display: block;
